Etape 1 et 2 terminé

--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bataille Navale</title>
-</head>
-<body>
+  </head>
+  <body>
     <p>On n'a rien à faire pour l'instant sur le code HTML</p>
 
     <p>regardons plutôt la console! (F12 ou clic-droit &gt; inspecter)</p>
 
-    <p>Et on oublie pas de faire le lien entre notre fichier HTML et notre fichier Javascript...</p>
-</body>
+    <p>
+      Et on oublie pas de faire le lien entre notre fichier HTML et notre
+      fichier Javascript...
+    </p>
+
+    <!-- J'inclus mon JS tout à la fin de mon HTML -->
+    <script src="Js/app.js"></script>
+  </body>
 </html>
