organisation du code en module à terminé

--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
             <button>Lancer une partie</button>
         </form>
     </div>
-
+    <div class="themes">
+      <form class="form-themes">   
+          <select name="theme" id="theme">
+              <option value="f0f" >Theme F0F</option> 
+              <option value="black-and-white" >Theme Noir Et Blanc</option>
+              <option value="terminal" >Theme Terminal</option>
+           </select>
+           
+      </form>
+    </div>
     <div id="game">
       
 
@@ -158,6 +167,7 @@
         <script src="js/grid.js"></script>
         <script src="js/game.js"></script>
         <script src="js/stats.js"></script>
+        <script src="js/themes.js"></script>
         <script src="js/app.js"></script>
     </div>
   </body>
