--- a/index.html
+++ b/index.html
@@ -161,11 +161,13 @@
       <div>
         <button id="stats">Voir les statistiques</button>
         <button id="toggle-actions">Afficher/Cacher l'historique</button>
+        <button id="scores">Voir les scores</button>
       </div>
 
       <div id="actions"></div>
         <script src="js/grid.js"></script>
         <script src="js/game.js"></script>
+        <script src="js/score.js"></script>
         <script src="js/stats.js"></script>
         <script src="js/themes.js"></script>
         <script src="js/app.js"></script>
